[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/PauseScn.gd" type="Script" id=2]

[node name="WinDialogs" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = 300.0
margin_right = -400.0
margin_bottom = -300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseWin" type="PopupDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -57.0
margin_right = 88.0
margin_bottom = 94.0

[node name="PauseVbox" type="VBoxContainer" parent="PauseWin"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="PauseLbl" type="Label" parent="PauseWin/PauseVbox"]
margin_right = 156.0
margin_bottom = 29.0
text = "KPUS"
align = 1

[node name="SettingsBtn" type="Button" parent="PauseWin/PauseVbox"]
margin_top = 33.0
margin_right = 156.0
margin_bottom = 62.0
text = "KSET"

[node name="ResumeBtn" type="Button" parent="PauseWin/PauseVbox"]
margin_top = 66.0
margin_right = 156.0
margin_bottom = 95.0
text = "KRUS"

[node name="ExitBtn" type="Button" parent="PauseWin/PauseVbox"]
margin_top = 99.0
margin_right = 156.0
margin_bottom = 128.0
text = "KEXT"

[node name="SettingsWin" type="AcceptDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -34.0
margin_right = 76.0
margin_bottom = 34.0
window_title = "KSET"

[node name="Grid" type="GridContainer" parent="SettingsWin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -33.0
margin_right = 68.0
margin_bottom = -4.0
columns = 3

[node name="Languages" type="MenuButton" parent="SettingsWin/Grid"]
visible = false
margin_right = 56.0
margin_bottom = 24.0
text = "KLANG"
flat = false
items = [ "KENG", null, 0, true, false, -1, 0, null, "", false, "KSWD", null, 0, false, false, -1, 0, null, "", false ]

[node name="MusicBtn" type="CheckBox" parent="SettingsWin/Grid"]
margin_right = 66.0
margin_bottom = 21.0
pressed = true
text = "KMUS"
align = 1

[node name="LicenseWin" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.0
margin_top = -138.0
margin_right = 217.0
margin_bottom = 137.0
window_title = "KLIC"
resizable = true

[node name="LicenseTxt" type="RichTextLabel" parent="LicenseWin"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -207.5
margin_top = 8.0
margin_right = 207.5
margin_bottom = 230.0
bbcode_enabled = true
bbcode_text = "This Source Code Form is subject to the terms of the Mozilla Public
License, v. 2.0. If a copy of the MPL was not distributed with this
file, You can obtain one at http://mozilla.org/MPL/2.0/.

[center]##########################[/center]

Tony's Dress Up (c) by Anthony Wilcox

Tony's Dress Up is licensed under a Creative Commons
Attribution-ShareAlike 4.0 International License.

You should have received a copy of the license along with this work. 
If not, see <http://creativecommons.org/licenses/by-sa/4.0/>."
text = "This Source Code Form is subject to the terms of the Mozilla Public
License, v. 2.0. If a copy of the MPL was not distributed with this
file, You can obtain one at http://mozilla.org/MPL/2.0/.

##########################

Tony's Dress Up (c) by Anthony Wilcox

Tony's Dress Up is licensed under a Creative Commons
Attribution-ShareAlike 4.0 International License.

You should have received a copy of the license along with this work. 
If not, see <http://creativecommons.org/licenses/by-sa/4.0/>."
[connection signal="pressed" from="PauseWin/PauseVbox/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="PauseWin/PauseVbox/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="PauseWin/PauseVbox/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="toggled" from="SettingsWin/Grid/MusicBtn" to="." method="_on_MusicBtn_toggled"]
